--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -4,9 +4,22 @@ on:
   push:
 
 jobs:
-  say_hello:
+  first job:
       runs-on: ubuntu-latest
 
       steps:
-        - name: affichage Hello World
-          run: echo "hello World"
+        - name: affichage un
+          run: echo "ceci est le premier job"
+  second_job:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: affichage deux
+        run: echo "ceci est le second job"
+
+  third job:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: affichage trois
+        run: echo "ceci est le troisième job"
