--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -1,13 +1,28 @@
 name: affichage Hello World
 
 on:
-  push:
-    branches:
-      - master
+  workflow_dispatch:
+    inputs:
+      usernames:
+        description: ""
+        required: true
+        type: string
+      level:
+        description: "level of the player"
+        required: true
+        type: string
+      class:
+        description: "the class of the player"
+        required: true
+        type: choice
+        options: ["jedi", "sith", "rebel"]
+
 
 jobs:
-  affichage:
-      runs-on: ubuntu-latest
-      steps:
-        - name: affichage
-          run: echo "hello world"
+  player_info:
+    runs-on: ubuntu-latest
+
+  steps:
+    - name: display_player_information
+      run:
+        echo "Le joueur ${{github.event.inputs.username}} est de niveau ${{github.event.inputs.level}} et joue un ${{github.event.inputs.class}}."
