--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -1,28 +1,27 @@
-name: affichage Hello World
+name: Player information Workflow
 
 on:
   workflow_dispatch:
     inputs:
       usernames:
-        description: ""
+        description: 'username of the player'
         required: true
         type: string
       level:
-        description: "level of the player"
+        description: 'level of the player'
         required: true
         type: string
-      class:
-        description: "the class of the player"
+      classe:
+        description: 'the class of the player'
         required: true
         type: choice
         options: ["jedi", "sith", "rebel"]
 
-
 jobs:
   player_info:
     runs-on: ubuntu-latest
-
-  steps:
-    - name: displayer
-      run:
-        echo "Le joueur ${{github.event.inputs.username}} est de niveau ${{github.event.inputs.level}} et joue un ${{github.event.inputs.class}}."
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Display player information
+        run: echo "Le joueur super ${{ github.event.inputs.usernames }} est de niveau ${{ github.event.inputs.level }} et joue un ${{ github.event.inputs.class }}."
