--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -11,7 +11,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: python v4
-        uses: actions/setup_python@v5
+        uses: actions/setup-python@v5
         with:
           python-version: '3.10'
       - run: python demo.py
