--- a/.github/workflows/TP.yml
+++ b/.github/workflows/TP.yml
@@ -1,12 +1,27 @@
-#name: Workflow
-#on:
-#  push:
-#  workflow_dispatch:
-#  schedule:
-#    - cron: '40 4 * * *'
-#jobs:
-#  triggered_by:
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Display player information
-#        run: echo "Le job a été déclenché par un événement de type ${{ github.event_name }}"
+name: 3.6
+
+on:
+  push:
+
+jobs:
+  testing_phrase:
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout
+        uses: actions/checkout@v2
+        with:
+          repository: https://github.com/tldr-pages/tldr-python-client
+          ref: '3.1.0'
+      - name: setup python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
+      - name: install dependencies
+        run:
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+      - name: install pytest
+        run: pip install pytest
+      - name: run tests
+        run: pytest
+
